// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderLarge renders 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Bar": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Circle": Object {
              "active": false,
              "alpha": 0,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Circle": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Circle",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Circle",
                  ],
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0.5,
              "mountX": 0.5,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Circle",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "Circle",
              ],
              "type": "Knob",
              "visible": true,
              "w": 32,
              "x": 0,
              "y": 10,
              "zIndex": 5,
            },
            "SliderBar": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Bar": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Bar",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Bar",
                  ],
                  "texture": Object {
                    "type": "StaticCanvasTexture",
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 1,
                },
                "Progress": Object {
                  "active": false,
                  "alpha": 0,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Progress",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Progress",
                  ],
                  "texture": Object {
                    "type": "StaticCanvasTexture",
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 2,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 8,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "SliderBar",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "SliderBar",
              ],
              "type": "ProgressBar",
              "visible": true,
              "w": 217.33333333333334,
              "x": 0,
              "y": 10,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Bar",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Bar",
          ],
          "visible": true,
          "w": 0,
          "x": 16,
          "y": 0,
          "zIndex": 0,
        },
        "LeftArrow": Object {
          "active": true,
          "alpha": 0.5,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "fff6f6f9",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "LeftArrow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "LeftArrow",
          ],
          "texture": Object {
            "h": 16,
            "type": "Arrow",
            "w": 8,
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": [Function],
          "zIndex": 0,
        },
        "RightArrow": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "fff6f6f9",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "RightArrow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "RightArrow",
          ],
          "texture": Object {
            "h": 16,
            "type": "Arrow",
            "w": 8,
          },
          "visible": true,
          "w": 0,
          "x": 241.33333333333334,
          "y": [Function],
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 20,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "visible": true,
      "w": 249.33333333333334,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`SliderLarge sets properties 1`] = `
Object {
  "Component": Object {
    "Container": Object {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": Object {
        "Bar": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "children": Object {
            "Circle": Object {
              "active": false,
              "alpha": 0,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Circle": Object {
                  "active": false,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": false,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Circle",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Circle",
                  ],
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 0,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": false,
              "flex": false,
              "flexItem": false,
              "h": 32,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0.5,
              "mountX": 0.5,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "Circle",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "Circle",
              ],
              "type": "Knob",
              "visible": true,
              "w": 32,
              "x": 108.66666666666667,
              "y": 10,
              "zIndex": 5,
            },
            "SliderBar": Object {
              "active": true,
              "alpha": 1,
              "attached": true,
              "boundsMargin": null,
              "children": Object {
                "Bar": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Bar",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Bar",
                  ],
                  "texture": Object {
                    "type": "StaticCanvasTexture",
                  },
                  "visible": true,
                  "w": 0,
                  "x": 0,
                  "y": 0,
                  "zIndex": 1,
                },
                "Progress": Object {
                  "active": true,
                  "alpha": 1,
                  "attached": true,
                  "boundsMargin": null,
                  "clipping": false,
                  "color": 4294967295,
                  "enabled": true,
                  "flex": false,
                  "flexItem": false,
                  "h": 0,
                  "isComponent": undefined,
                  "mount": 0,
                  "mountX": 0,
                  "mountY": 0,
                  "pivot": 0.5,
                  "pivotX": 0.5,
                  "pivotY": 0.5,
                  "ref": "Progress",
                  "renderOfScreen": undefined,
                  "renderToTexture": false,
                  "scale": 1,
                  "scaleX": 1,
                  "scaleY": 1,
                  "state": undefined,
                  "tag": [Function],
                  "tags": Array [
                    "Progress",
                  ],
                  "texture": Object {
                    "type": "StaticCanvasTexture",
                  },
                  "visible": true,
                  "w": 2.6525683090827545,
                  "x": 0,
                  "y": 0,
                  "zIndex": 2,
                },
              },
              "clipping": false,
              "color": 4294967295,
              "enabled": true,
              "flex": false,
              "flexItem": false,
              "h": 8,
              "hasFinalFocus": false,
              "hasFocus": false,
              "isComponent": true,
              "mount": 0,
              "mountX": 0,
              "mountY": 0.5,
              "pivot": 0.5,
              "pivotX": 0.5,
              "pivotY": 0.5,
              "ref": "SliderBar",
              "renderOfScreen": undefined,
              "renderToTexture": false,
              "scale": 1,
              "scaleX": 1,
              "scaleY": 1,
              "state": "",
              "tag": [Function],
              "tags": Array [
                "SliderBar",
              ],
              "type": "ProgressBar",
              "visible": true,
              "w": 217.33333333333334,
              "x": 0,
              "y": 10,
              "zIndex": 0,
            },
          },
          "clipping": false,
          "color": 4294967295,
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Bar",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "Bar",
          ],
          "visible": true,
          "w": 0,
          "x": 16,
          "y": 0,
          "zIndex": 0,
        },
        "LeftArrow": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "fff6f6f9",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "LeftArrow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "LeftArrow",
          ],
          "texture": Object {
            "h": 16,
            "type": "Arrow",
            "w": 8,
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": [Function],
          "zIndex": 0,
        },
        "RightArrow": Object {
          "active": true,
          "alpha": 1,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "fff6f6f9",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0.5,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "RightArrow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": Array [
            "RightArrow",
          ],
          "texture": Object {
            "h": 16,
            "type": "Arrow",
            "w": 8,
          },
          "visible": true,
          "w": 0,
          "x": 241.33333333333334,
          "y": [Function],
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 20,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Container",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "Container",
      ],
      "visible": true,
      "w": 249.33333333333334,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;
